--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 authors = ["storyfeet <thebeaky@psmail.net>"]
 edition = "2018"
 keywords = ["template","language","html"]
-licence="MIT"
+license="MIT"
 readme = "readme.md"
 description = "A template language library that allows multiple parameters to pass between templates"
+repository ="https://github.com/storyfeet/templito"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
