--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ description = "A template language library that allows multiple parameters to pa
 repository ="https://github.com/storyfeet/templito"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+#
+#
+
+
 
 [dependencies]
 
@@ -22,4 +26,5 @@ serde = "1.0.114"
 pulldown-cmark = "0.7.2"
 chrono = "0.4.15"
 regex = "1.3.9"
+card_format = {path="../../cardmakers/card_format/"}
 
