--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,5 @@ pulldown-cmark = "0.7.2"
 chrono = "0.4.15"
 regex = "1.3.9"
 card_format = {path="../../cardmakers/card_format/"}
+rand = "0.7.3"
 
