--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ repository ="https://github.com/storyfeet/templito"
 
 [dependencies]
 
-gobble="0.6.3"
+gobble = "0.6.3"
 anyhow = "1.0.31"
 thiserror = "1.0.20"
 toml = "0.5.6"
@@ -28,4 +28,6 @@ chrono = "0.4.15"
 regex = "1.3.9"
 card_format = {path="../../cardmakers/card_format/"}
 rand = "0.7.3"
+base64 = "0.13.0"
+image = "0.23.11"
 
