--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,11 @@ serde = "1.0.114"
 pulldown-cmark = "0.7.2"
 chrono = "0.4.15"
 regex = "1.3.9"
-card_format = {path="../../cardmakers/card_format/"}
-err_tools = {path="../err_tools/"}
+#card_format = {path="../../cardmakers/card_format/"}
+card_format = "0.1.0"
+
+#err_tools = {path="../err_tools/"}
+err_tools = "0.1.1"
 rand = "0.7.3"
 base64 = "0.13.0"
 image = "0.23.11"
